tests/failing/1-forgot_type_import/main.af
foo: (n: int) {  // Error: forgot to import int
    @write("Number\n", @exit(0))
}
main: () {
    foo(1)
}
